# Image_Filters_Cpp17

./: CMakeLists.txt  args_parser.cpp  args_parser.h  bmp_exporter.h  bmp_format.h  bmp_importer.h  color.cpp  color.h  image.cpp  image.h  image_processor.cpp
filters/: blur_filter.cpp  blur_filter.h  complex_filter.cpp  complex_filter.h  crop_filter.cpp  crop_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  filter.h  filters_builder.h  grayscale_filter.cpp  grayscale_filter.h  matrix_filter.cpp  matrix_filter.h  negative_filter.cpp  negative_filter.h  sharpening_filter.cpp  sharpening_filter.h
